--- a/pages/register.html
+++ b/pages/register.html
@@ -4,17 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registro - PrimeFit</title>
-    
-    <!-- SweetAlert CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.0/dist/sweetalert2.min.css">
-
-    <!-- SweetAlert JS com defer -->
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.0/dist/sweetalert2.min.js" defer></script>
-
+    <title>Registro</title>
     <link rel="stylesheet" href="../styles/main.css">
-    
-    <!-- Carrega o JS externo com defer -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.0/dist/sweetalert2.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.0/dist/sweetalert2.min.js" defer></script>
     <script src="../scripts/register.js" defer></script>
 </head>
 
