Ajustar código na página inicial

--- a/pages/index.html
+++ b/pages/index.html
@@ -2,63 +2,29 @@
 <html style="font-size: 16px;" lang="pt">
 
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>PrimeFit</title>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="referrer" content="origin">
+  <meta name="description" content="">
+  <meta name="theme-color" content="#478ac9">
+  <meta property="og:title" content="Página Inicial">
+  <meta property="og:type" content="website">
+  <meta data-intl-tel-input-cdn-path="intlTelInput/">
   <meta name="keywords"
     content="Transform Yourself, ​Classes&nbsp;for all levels, ​Formats, ​See more, follow us on, Contact Us, INTUITIVO">
-  <meta name="description" content="">
-  <title>PrimeFit</title>  
-  <!-- SweetAlert CSS -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.0/dist/sweetalert2.min.css">
-
-<!-- SweetAlert JS -->
-<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.0/dist/sweetalert2.min.js"></script>
-
-  <script src="../scripts/index.js"></script>
   <link rel="stylesheet" href="../styles/index.css" media="screen">
-  <script class="u-script" type="text/javascript" src="../scripts/scroller.js" defer=""></script>
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
-  <meta name="referrer" content="origin">
   <link id="u-theme-google-font" rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
   <link id="u-page-google-font" rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
-  <style>
-    /* Fonte do Google */
-    .u-logo {
-      text-decoration: none; /* Remove o sublinhado padrão */
-    }
-
-    .u-logo-text {
-      font-family: 'Poppins', sans-serif;
-      font-size: 24px; /* Aumenta o tamanho do logo */
-      font-weight: 700; /* Deixa o texto mais destacado */
-      color: #000; /* Preto */
-      display: inline-block; /* Mantém o alinhamento */
-    }
-
-    /* Remover o hover azul */
-    .u-logo:hover .u-logo-text {
-      color: #000; /* Permanece preto ao passar o mouse */
-    }
-  </style>
-  <script type="application/ld+json">{
-		"@context": "http://schema.org",
-		"@type": "Organization",
-		"name": "",
-		"logo": "../images/default-logo.png"
-}</script>
-  <meta name="theme-color" content="#478ac9">
-  <meta property="og:title" content="Página Inicial">
-  <meta property="og:type" content="website">
-  <meta data-intl-tel-input-cdn-path="intlTelInput/">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.0/dist/sweetalert2.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.0/dist/sweetalert2.min.js"></script>
+  <script src="../scripts/index.js"></script>
+  <script class="u-script" type="text/javascript" src="../scripts/scroller.js" defer=""></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
-
-<!-- <section id="plans">
-  <h2>Planos de Assinatura</h2>
-</section> -->
 
 <body data-home-page="Página-Inicial.html" data-home-page-title="Página Inicial" data-path-to-root="./"
   data-include-products="false" class="u-body u-xl-mode" data-lang="pt">
@@ -67,7 +33,6 @@
       <a href="#" class="u-image u-logo u-image-1" style="text-decoration: none;">
         <span class="u-logo-text">Primefit</span>
       </a>
-      
       <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
         <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px;">
           <a class="u-button-style u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base"
@@ -88,10 +53,18 @@
         <div class="u-nav-container">
           <ul class="u-nav u-unstyled u-nav-1">
             <li id="userWelcome" class="u-nav-item hide">Olá <span id="usernameDisplay"></span>!</li>
-            <li id="accountLink" class="u-nav-item hide"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="account.html" style="padding: 10px 20px;">Minha Conta</a></li>
-            <li id="logoutLink" class="u-nav-item hide"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#">Sair</a></li>
-            <li id="loginLink" class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="login.html" style="padding: 10px 20px;">Entrar</a></li>
-            <li id="registerLink" class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="register.html" style="padding: 10px 20px;">Registrar</a></li>
+            <li id="accountLink" class="u-nav-item hide"><a
+                class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base"
+                href="account.html" style="padding: 10px 20px;">Minha Conta</a></li>
+            <li id="logoutLink" class="u-nav-item hide"><a
+                class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base"
+                href="#">Sair</a></li>
+            <li id="loginLink" class="u-nav-item"><a
+                class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base"
+                href="login.html" style="padding: 10px 20px;">Entrar</a></li>
+            <li id="registerLink" class="u-nav-item"><a
+                class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base"
+                href="register.html" style="padding: 10px 20px;">Registrar</a></li>
           </ul>
         </div>
         <div class="u-nav-container-collapse">
@@ -110,7 +83,6 @@
       </nav>
     </div>
   </header>
-
   <section
     class="skrollable skrollable-between u-align-center u-clearfix u-container-align-center u-image u-shading u-section-1"
     src="" id="carousel_fb2b" data-image-width="1980" data-image-height="1320">
@@ -128,13 +100,10 @@
         data-animation-duration="1500"> Treinos&nbsp;para todos os níveis</h2>
       <div class="u-expanded-width u-list u-list-1">
         <div class="u-repeater u-repeater-1" id="plans">
-
-  
         </div>
       </div>
     </div>
   </section>
-
   <section class="u-align-center u-clearfix u-container-align-center u-image u-shading u-section-5" id="carousel_17c7"
     data-image-width="1980" data-image-height="1320">
     <div
@@ -148,7 +117,6 @@
           class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-active-white u-text-hover-white u-text-palette-2-base u-btn-1"
           target="_blank">@sejaprimefit</a>
       </h3>
-
     </div>
   </section>
   <div class="u-clearfix u-sheet u-sheet-1"></div>
@@ -158,7 +126,6 @@
       © 2024 Prime Fit. Todos os direitos reservados.
     </p>
   </footer>
-
 </body>
 
 </html>
