--- a/pages/index.html
+++ b/pages/index.html
@@ -2,130 +2,131 @@
 <html style="font-size: 16px;" lang="pt">
 
 <head>
-  <title>PrimeFit</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="referrer" content="origin">
-  <meta name="description" content="">
-  <meta name="theme-color" content="#478ac9">
-  <meta property="og:title" content="Página Inicial">
-  <meta property="og:type" content="website">
-  <meta data-intl-tel-input-cdn-path="intlTelInput/">
-  <meta name="keywords"
-    content="Transform Yourself, ​Classes&nbsp;for all levels, ​Formats, ​See more, follow us on, Contact Us, INTUITIVO">
-  <link rel="stylesheet" href="../styles/index.css" media="screen">
-  <link id="u-theme-google-font" rel="stylesheet"
-    href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
-  <link id="u-page-google-font" rel="stylesheet"
-    href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.0/dist/sweetalert2.min.css">
-  <script src="../scripts/index.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.0/dist/sweetalert2.min.js"></script>
-  <script class="u-script" type="text/javascript" src="../scripts/scroller.js" defer=""></script>
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <title>PrimeFit</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="referrer" content="origin">
+    <meta name="description" content="">
+    <meta name="theme-color" content="#478ac9">
+    <meta property="og:title" content="Página Inicial">
+    <meta property="og:type" content="website">
+    <meta data-intl-tel-input-cdn-path="intlTelInput/">
+    <meta name="keywords"
+        content="Transform Yourself, ​Classes&nbsp;for all levels, ​Formats, ​See more, follow us on, Contact Us, INTUITIVO">
+    <link rel="icon" href="../images/favicon.png" type="image/png">
+    <link rel="stylesheet" href="../styles/index.css" media="screen">
+    <link id="u-theme-google-font" rel="stylesheet"
+        href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
+    <link id="u-page-google-font" rel="stylesheet"
+        href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.0/dist/sweetalert2.min.css">
+    <script src="../scripts/index.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.0/dist/sweetalert2.min.js"></script>
+    <script class="u-script" type="text/javascript" src="../scripts/scroller.js" defer=""></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 
 <body data-home-page="Página-Inicial.html" data-home-page-title="Página Inicial" data-path-to-root="./"
-  data-include-products="false" class="u-body u-xl-mode" data-lang="pt">
-  <header class="u-clearfix u-header u-header" id="sec-2d01">
-    <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-      <a href="#" class="u-image u-logo u-image-1" style="text-decoration: none;">
-        <span class="u-logo-text">Primefit</span>
-      </a>
-      <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
-        <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px;">
-          <a class="u-button-style u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base"
-            href="#">
-            <svg class="u-svg-link" viewBox="0 0 24 24">
-              <use xlink:href="#menu-hamburger"></use>
-            </svg>
-            <svg class="u-svg-content" version="1.1" id="menu-hamburger" viewBox="0 0 16 16" x="0px" y="0px"
-              xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg">
-              <g>
-                <rect y="1" width="16" height="2"></rect>
-                <rect y="7" width="16" height="2"></rect>
-                <rect y="13" width="16" height="2"></rect>
-              </g>
-            </svg>
-          </a>
+    data-include-products="false" class="u-body u-xl-mode" data-lang="pt">
+    <header class="u-clearfix u-header u-header" id="sec-2d01">
+        <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+            <a href="#" class="u-image u-logo u-image-1" style="text-decoration: none;">
+            <span class="u-logo-text">Primefit</span>
+            </a>
+            <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
+                <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px;">
+                    <a class="u-button-style u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base"
+                        href="#">
+                        <svg class="u-svg-link" viewBox="0 0 24 24">
+                            <use xlink:href="#menu-hamburger"></use>
+                        </svg>
+                        <svg class="u-svg-content" version="1.1" id="menu-hamburger" viewBox="0 0 16 16" x="0px" y="0px"
+                            xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg">
+                            <g>
+                                <rect y="1" width="16" height="2"></rect>
+                                <rect y="7" width="16" height="2"></rect>
+                                <rect y="13" width="16" height="2"></rect>
+                            </g>
+                        </svg>
+                    </a>
+                </div>
+                <div class="u-nav-container">
+                    <ul class="u-nav u-unstyled u-nav-1">
+                        <li id="userWelcome" class="u-nav-item hide">Olá <span id="usernameDisplay"></span>!</li>
+                        <li id="accountLink" class="u-nav-item hide"><a
+                            class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base"
+                            href="account.html" style="padding: 10px 20px;">Minha Conta</a></li>
+                        <li id="logoutLink" class="u-nav-item hide"><a
+                            class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base"
+                            href="#">Sair</a></li>
+                        <li id="loginLink" class="u-nav-item"><a
+                            class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base"
+                            href="login.html" style="padding: 10px 20px;">Entrar</a></li>
+                        <li id="registerLink" class="u-nav-item"><a
+                            class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base"
+                            href="register.html" style="padding: 10px 20px;">Registrar</a></li>
+                    </ul>
+                </div>
+                <div class="u-nav-container-collapse">
+                    <div class="u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
+                        <div class="u-inner-container-layout u-sidenav-overflow">
+                            <div class="u-menu-close"></div>
+                            <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2">
+                                <li class="u-nav-item"><a class="u-button-style u-nav-link" href="./">Página Inicial</a></li>
+                                <li class="u-nav-item"><a class="u-button-style u-nav-link" href="login.html">Entrar</a></li>
+                                <li class="u-nav-item"><a class="u-button-style u-nav-link" href="register.html">Registro</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
+                </div>
+            </nav>
         </div>
-        <div class="u-nav-container">
-          <ul class="u-nav u-unstyled u-nav-1">
-            <li id="userWelcome" class="u-nav-item hide">Olá <span id="usernameDisplay"></span>!</li>
-            <li id="accountLink" class="u-nav-item hide"><a
-                class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base"
-                href="account.html" style="padding: 10px 20px;">Minha Conta</a></li>
-            <li id="logoutLink" class="u-nav-item hide"><a
-                class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base"
-                href="#">Sair</a></li>
-            <li id="loginLink" class="u-nav-item"><a
-                class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base"
-                href="login.html" style="padding: 10px 20px;">Entrar</a></li>
-            <li id="registerLink" class="u-nav-item"><a
-                class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base"
-                href="register.html" style="padding: 10px 20px;">Registrar</a></li>
-          </ul>
+    </header>
+    <section
+        class="skrollable skrollable-between u-align-center u-clearfix u-container-align-center u-image u-shading u-section-1"
+        src="" id="carousel_fb2b" data-image-width="1980" data-image-height="1320">
+        <br><br><br><br><br><br><br><br><br><br>
+        <div class="u-clearfix u-sheet u-sheet-1">
+            <a href="#plan"
+                class="u-active-palette-2-base u-align-center u-border-2 u-border-active-palette-2-base u-border-hover-palette-2-base u-border-palette-2-base u-btn u-button-style u-hover-palette-2-base u-none u-text-active-black u-text-body-alt-color u-text-hover-black u-btn-2"
+                data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="500">Ver todos os
+            planos</a>
         </div>
-        <div class="u-nav-container-collapse">
-          <div class="u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
-            <div class="u-inner-container-layout u-sidenav-overflow">
-              <div class="u-menu-close"></div>
-              <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2">
-                <li class="u-nav-item"><a class="u-button-style u-nav-link" href="./">Página Inicial</a></li>
-                <li class="u-nav-item"><a class="u-button-style u-nav-link" href="login.html">Entrar</a></li>
-                <li class="u-nav-item"><a class="u-button-style u-nav-link" href="register.html">Registro</a></li>
-              </ul>
+    </section>
+    <section class="u-align-center u-black u-clearfix u-container-align-center u-section-3" id="plan">
+        <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+            <h2 class="u-align-center u-text u-text-default u-text-1" data-animation-name="customAnimationIn"
+                data-animation-duration="1500"> Treinos&nbsp;para todos os níveis</h2>
+            <div class="u-expanded-width u-list u-list-1">
+                <div class="u-repeater u-repeater-1" id="plans">
+                </div>
             </div>
-          </div>
-          <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
         </div>
-      </nav>
-    </div>
-  </header>
-  <section
-    class="skrollable skrollable-between u-align-center u-clearfix u-container-align-center u-image u-shading u-section-1"
-    src="" id="carousel_fb2b" data-image-width="1980" data-image-height="1320">
-    <br><br><br><br><br><br><br><br><br><br>
-    <div class="u-clearfix u-sheet u-sheet-1">
-      <a href="#plan"
-        class="u-active-palette-2-base u-align-center u-border-2 u-border-active-palette-2-base u-border-hover-palette-2-base u-border-palette-2-base u-btn u-button-style u-hover-palette-2-base u-none u-text-active-black u-text-body-alt-color u-text-hover-black u-btn-2"
-        data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="500">Ver todos os
-        planos</a>
-    </div>
-  </section>
-  <section class="u-align-center u-black u-clearfix u-container-align-center u-section-3" id="plan">
-    <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-      <h2 class="u-align-center u-text u-text-default u-text-1" data-animation-name="customAnimationIn"
-        data-animation-duration="1500"> Treinos&nbsp;para todos os níveis</h2>
-      <div class="u-expanded-width u-list u-list-1">
-        <div class="u-repeater u-repeater-1" id="plans">
+    </section>
+    <section class="u-align-center u-clearfix u-container-align-center u-image u-shading u-section-5" id="carousel_17c7"
+        data-image-width="1980" data-image-height="1320">
+        <div
+            class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-sm u-valign-middle-xl u-valign-middle-xs u-sheet-1">
+            <span class="u-file-icon u-icon u-text-palette-2-base u-icon-1" data-animation-name="customAnimationIn"
+                data-animation-duration="1000"><img src="../images/instagram.png" alt=""></span>
+            <h2 class="u-text u-text-1" data-animation-name="slideIn" data-animation-duration="2000"
+                data-animation-direction="Left">Segue a gente!</h2>
+            <h3 class="u-text u-text-body-alt-color u-text-2" data-animation-name="customAnimationIn"
+                data-animation-duration="1500"> Instagram <a href="https://www.instagram.com/sejaprimefit"
+                class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-active-white u-text-hover-white u-text-palette-2-base u-btn-1"
+                target="_blank">@sejaprimefit</a>
+            </h3>
         </div>
-      </div>
-    </div>
-  </section>
-  <section class="u-align-center u-clearfix u-container-align-center u-image u-shading u-section-5" id="carousel_17c7"
-    data-image-width="1980" data-image-height="1320">
-    <div
-      class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-sm u-valign-middle-xl u-valign-middle-xs u-sheet-1">
-      <span class="u-file-icon u-icon u-text-palette-2-base u-icon-1" data-animation-name="customAnimationIn"
-        data-animation-duration="1000"><img src="../images/instagram.png" alt=""></span>
-      <h2 class="u-text u-text-1" data-animation-name="slideIn" data-animation-duration="2000"
-        data-animation-direction="Left">Segue a gente!</h2>
-      <h3 class="u-text u-text-body-alt-color u-text-2" data-animation-name="customAnimationIn"
-        data-animation-duration="1500"> Instagram <a href="https://www.instagram.com/sejaprimefit"
-          class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-active-white u-text-hover-white u-text-palette-2-base u-btn-1"
-          target="_blank">@sejaprimefit</a>
-      </h3>
-    </div>
-  </section>
-  <div class="u-clearfix u-sheet u-sheet-1"></div>
-  </section>
-  <footer class="u-align-center u-clearfix u-container-align-center u-footer u-grey-80" id="sec-0673">
-    <p class="u-small-text u-text u-text-variant u-text-1">
-      © 2024 Prime Fit. Todos os direitos reservados.
-    </p>
-  </footer>
+    </section>
+    <div class="u-clearfix u-sheet u-sheet-1"></div>
+    </section>
+    <footer class="u-align-center u-clearfix u-container-align-center u-footer u-grey-80" id="sec-0673">
+        <p class="u-small-text u-text u-text-variant u-text-1">
+            © 2024 Prime Fit. Todos os direitos reservados.
+        </p>
+    </footer>
 </body>
 
 </html>
