--- a/pages/register.html
+++ b/pages/register.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro</title>
+    <link rel="icon" href="../images/favicon.png" type="image/png">
     <link rel="stylesheet" href="../styles/main.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.0/dist/sweetalert2.min.css">
     <script src="../scripts/register.js" defer></script>
