--- a/pages/index.html
+++ b/pages/index.html
@@ -32,7 +32,7 @@
     <header class="u-clearfix u-header u-header" id="sec-2d01">
         <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
             <a href="#" class="u-image u-logo u-image-1" style="text-decoration: none;">
-            <span class="u-logo-text">Primefit</span>
+            <span class="u-logo-text">PrimeFit</span>
             </a>
             <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
                 <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px;">
